--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,3 @@
-# CI for Product Catalog Service
-
 name: product-catalog-ci
 
 on: 
@@ -12,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: checkout code
+        - name: Checkout code
           uses: actions/checkout@v4
 
         - name: Setup Go 1.22
@@ -26,7 +24,7 @@ jobs:
             go mod download
             go build -o product-catalog-service main.go
 
-        - name: unit tests
+        - name: Unit Tests
           run: |
             cd src/product-catalog
             go test ./...
@@ -35,20 +33,19 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: checkout code
+        - name: Checkout code
           uses: actions/checkout@v4
         
         - name: Setup Go 1.22
           uses: actions/setup-go@v2
           with:
-           go-version: 1.22
+            go-version: 1.22
         
         - name: Run golangci-lint
           uses: golangci/golangci-lint-action@v6
           with:
             version: v1.55.2
-            run: golangci-lint run
-            working-directory: src/product-catalog
+            args: --timeout=5m ./src/product-catalog/...
 
     docker:
         runs-on: ubuntu-latest
@@ -56,7 +53,7 @@ jobs:
         needs: build
 
         steps:
-        - name: checkout code
+        - name: Checkout code
           uses: actions/checkout@v4
 
         - name: Install Docker
@@ -68,41 +65,33 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_TOKEN }}
 
-        - name: Docker Push
+        - name: Build and Push Docker Image
           uses: docker/build-push-action@v6
           with:
             context: src/product-catalog
             file: src/product-catalog/Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{github.run_id}}
+            tags: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}
 
-    
     updatek8s:
         runs-on: ubuntu-latest
 
         needs: docker
 
         steps:
-        - name: checkout code
+        - name: Checkout code
           uses: actions/checkout@v4
           with:
             token: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Update tag in kubernetes deployment manifest
+        - name: Update tag in Kubernetes deployment manifest
           run: | 
-               sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{github.run_id}}|" kubernetes/productcatalog/deploy.yaml
+            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}|" kubernetes/productcatalog/deploy.yaml
         
-        - name: Commit and push changes
+        - name: Commit and Push Changes
           run: |
-            git config --global user.email "abhishek@gmail.com"
-            git config --global user.name "Abhishek Veeramalla"
+            git config --global user.email "neu90118@gmail.com"
+            git config --global user.name "Dhivaa03"
             git add kubernetes/productcatalog/deploy.yaml
             git commit -m "[CI]: Update product catalog image tag"
             git push origin HEAD:main -f
-
-        
-        
-          
-
-
-        
