--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: product-catalog-ci
+name: ad-ci
 
 on: 
     pull_request:
@@ -13,39 +13,39 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        - name: Setup Go 1.22
-          uses: actions/setup-go@v2
+        - name: Set up JDK 17
+          uses: actions/setup-java@v4
           with:
-            go-version: 1.22
-        
-        - name: Build
-          run: |
-            cd src/product-catalog
-            go mod download
-            go build -o product-catalog-service main.go
+            java-version: '17'
+            distribution: 'temurin'
 
-        - name: Unit Tests
-          run: |
-            cd src/product-catalog
-            go test ./...
-    
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
+
+        - name: Build with Gradle
+          run: ./gradlew build --no-daemon
+
+        - name: Run Unit Tests
+          run: ./gradlew test --no-daemon
+
     code-quality:
         runs-on: ubuntu-latest
 
         steps:
         - name: Checkout code
           uses: actions/checkout@v4
-        
-        - name: Setup Go 1.22
-          uses: actions/setup-go@v2
+
+        - name: Set up JDK 17
+          uses: actions/setup-java@v4
           with:
-            go-version: 1.22
-        
-        - name: Run golangci-lint
-          uses: golangci/golangci-lint-action@v6
-          with:
-            version: v1.55.2
-            args: --timeout=5m ./src/product-catalog/...
+            java-version: '17'
+            distribution: 'temurin'
+
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
+
+        - name: Run Checkstyle
+          run: ./gradlew checkstyleMain --no-daemon
 
     docker:
         runs-on: ubuntu-latest
@@ -58,7 +58,7 @@ jobs:
 
         - name: Install Docker
           uses: docker/setup-buildx-action@v1
-        
+
         - name: Login to Docker
           uses: docker/login-action@v3
           with:
@@ -68,15 +68,15 @@ jobs:
         - name: Build and Push Docker Image
           uses: docker/build-push-action@v6
           with:
-            context: src/product-catalog
-            file: src/product-catalog/Dockerfile
+            context: ad
+            file: ad/Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}
+            tags: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}
 
     updatek8s:
         runs-on: ubuntu-latest
 
-        needs: docker
+        needs: [build, docker, code-quality]
 
         steps:
         - name: Checkout code
@@ -86,12 +86,12 @@ jobs:
 
         - name: Update tag in Kubernetes deployment manifest
           run: | 
-            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}|" kubernetes/productcatalog/deploy.yaml
-        
+            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}|" kubernetes/ad/deploy.yaml
+
         - name: Commit and Push Changes
           run: |
             git config --global user.email "neu90118@gmail.com"
             git config --global user.name "Dhivaa03"
-            git add kubernetes/productcatalog/deploy.yaml
-            git commit -m "[CI]: Update product catalog image tag"
+            git add kubernetes/ad/deploy.yaml
+            git commit -m "[CI]: Update ad image tag"
             git push origin HEAD:main -f
