--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,102 +1,108 @@
 name: ad-ci
 
 on: 
-    pull_request:
-        branches:
-        - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensure full repo is fetched
 
-        - name: Set up JDK 17
-          uses: actions/setup-java@v4
-          with:
-            java-version: '17'
-            distribution: 'temurin'
+      - name: Debug - List Files
+        run: ls -la
 
-        - name: Grant execute permission for gradlew
-          run: chmod +x gradlew
-          working-directory: .
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-        - name: Build with Gradle
-          run: ./gradlew build --no-daemon
-          working-directory: ad
+      - name: Grant execute permission for gradlew
+        run: chmod +x ad/gradlew
 
-        - name: Run Unit Tests
-          run: ./gradlew test --no-daemon
-          working-directory: ad
+      - name: Build with Gradle
+        run: ./gradlew build --no-daemon
+        working-directory: ad
 
-    code-quality:
-        runs-on: ubuntu-latest
+      - name: Run Unit Tests
+        run: ./gradlew test --no-daemon
+        working-directory: ad
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  code-quality:
+    runs-on: ubuntu-latest
 
-        - name: Set up JDK 17
-          uses: actions/setup-java@v4
-          with:
-            java-version: '17'
-            distribution: 'temurin'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensure full repo is fetched
 
-        - name: Grant execute permission for gradlew
-          run: chmod +x gradlew
-          working-directory: .
+      - name: Debug - List Files
+        run: ls -la
 
-        - name: Run Checkstyle
-          run: ./gradlew checkstyleMain --no-daemon
-          working-directory: ad
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    docker:
-        runs-on: ubuntu-latest
+      - name: Grant execute permission for gradlew
+        run: chmod +x ad/gradlew
 
-        needs: build
+      - name: Run Checkstyle
+        run: ./gradlew checkstyleMain --no-daemon
+        working-directory: ad
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
 
-        - name: Install Docker
-          uses: docker/setup-buildx-action@v1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Login to Docker
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Install Docker
+        uses: docker/setup-buildx-action@v1
 
-        - name: Build and Push Docker Image
-          uses: docker/build-push-action@v6
-          with:
-            context: ad
-            file: ad/Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-    updatek8s:
-        runs-on: ubuntu-latest
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: ad
+          file: ad/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}
 
-        needs: [build, docker, code-quality]
+  updatek8s:
+    runs-on: ubuntu-latest
+    needs: [build, docker, code-quality]
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-          with:
-            token: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Update tag in Kubernetes deployment manifest
-          run: | 
-            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}|" kubernetes/ad/deploy.yaml
+      - name: Update tag in Kubernetes deployment manifest
+        run: | 
+          sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}|" kubernetes/ad/deploy.yaml
 
-        - name: Commit and Push Changes
-          run: |
-            git config --global user.email "neu90118@gmail.com"
-            git config --global user.name "Dhivaa03"
-            git add kubernetes/ad/deploy.yaml
-            git commit -m "[CI]: Update ad image tag"
-            git push origin HEAD:main -f
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.email "neu90118@gmail.com"
+          git config --global user.name "Dhivaa03"
+          git add kubernetes/ad/deploy.yaml
+          git commit -m "[CI]: Update ad image tag"
+          git push origin HEAD:main -f
