--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,97 +1,108 @@
-name: product-catalog-ci
+name: ad-ci
 
 on: 
-    pull_request:
-        branches:
-        - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensure full repo is fetched
 
-        - name: Setup Go 1.22
-          uses: actions/setup-go@v2
-          with:
-            go-version: 1.22
-        
-        - name: Build
-          run: |
-            cd src/product-catalog
-            go mod download
-            go build -o product-catalog-service main.go
+      - name: Debug - List Files
+        run: ls -la
 
-        - name: Unit Tests
-          run: |
-            cd src/product-catalog
-            go test ./...
-    
-    code-quality:
-        runs-on: ubuntu-latest
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-        
-        - name: Setup Go 1.22
-          uses: actions/setup-go@v2
-          with:
-            go-version: 1.22
-        
-        - name: Run golangci-lint
-          uses: golangci/golangci-lint-action@v6
-          with:
-            version: v1.55.2
-            args: --timeout=5m ./src/product-catalog/...
+      - name: Grant execute permission for gradlew
+        run: chmod +x ad/gradlew
 
-    docker:
-        runs-on: ubuntu-latest
+      - name: Build with Gradle
+        run: ./gradlew build --no-daemon
+        working-directory: ad
 
-        needs: build
+      - name: Run Unit Tests
+        run: ./gradlew test --no-daemon
+        working-directory: ad
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  code-quality:
+    runs-on: ubuntu-latest
 
-        - name: Install Docker
-          uses: docker/setup-buildx-action@v1
-        
-        - name: Login to Docker
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_TOKEN }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensure full repo is fetched
 
-        - name: Build and Push Docker Image
-          uses: docker/build-push-action@v6
-          with:
-            context: src/product-catalog
-            file: src/product-catalog/Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}
+      - name: Debug - List Files
+        run: ls -la
 
-    updatek8s:
-        runs-on: ubuntu-latest
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-        needs: docker
+      - name: Grant execute permission for gradlew
+        run: chmod +x ad/gradlew
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-          with:
-            token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Checkstyle
+        run: ./gradlew checkstyleMain --no-daemon
+        working-directory: ad
 
-        - name: Update tag in Kubernetes deployment manifest
-          run: | 
-            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{ github.run_id }}|" kubernetes/productcatalog/deploy.yaml
-        
-        - name: Commit and Push Changes
-          run: |
-            git config --global user.email "neu90118@gmail.com"
-            git config --global user.name "Dhivaa03"
-            git add kubernetes/productcatalog/deploy.yaml
-            git commit -m "[CI]: Update product catalog image tag"
-            git push origin HEAD:main -f
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Docker
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: ad
+          file: ad/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}
+
+  updatek8s:
+    runs-on: ubuntu-latest
+    needs: [build, docker, code-quality]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update tag in Kubernetes deployment manifest
+        run: | 
+          sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ad:${{ github.run_id }}|" kubernetes/ad/deploy.yaml
+
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.email "neu90118@gmail.com"
+          git config --global user.name "Dhivaa03"
+          git add kubernetes/ad/deploy.yaml
+          git commit -m "[CI]: Update ad image tag"
+          git push origin HEAD:main -f
